<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_apps">My Nanodegree Apps!</string>
    <string name="button_label1">Spotify Streamer</string>
    <string name="button_label2">Scores App</string>
    <string name="button_label3">Library App</string>
    <string name="button_label4">Build it bigger</string>
    <string name="button_label5">XYZ Reader</string>
    <string name="button_label6">Capstone: My Own App</string>

</resources>
